# algo_money

./: .gitignore  .replit  README.md  machine_learning_pytorch_lstm_colab.ipynb  machine_learning_pytorch_lstm_colab.py  pyproject.toml  setup.md  stock_machine_learning_lstm.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
logs/: StockMachineLearningLstm_2024-01-09_21-06-32_stats.csv  StockMachineLearningLstm_2024-01-09_22-30-30_settings.json  StockMachineLearningLstm_2024-01-09_22-30-30_tearsheet.html  StockMachineLearningLstm_2024-01-09_22-30-30_trades.csv  StockMachineLearningLstm_2024-01-09_22-37-57_stats.csv  StockMachineLearningLstm_2024-01-09_23-33-09_settings.json  StockMachineLearningLstm_2024-01-09_23-33-09_tearsheet.html  StockMachineLearningLstm_2024-01-09_23-33-09_trades.csv  StockMachineLearningLstm_2024-01-12_17-11-26_stats.csv  StockMachineLearningLstm_2024-01-12_18-06-57_settings.json  StockMachineLearningLstm_2024-01-12_18-06-57_tearsheet.html  StockMachineLearningLstm_2024-01-12_18-06-57_trades.csv  StockMachineLearningLstm_2024-01-12_18-57-18_stats.csv  StockMachineLearningLstm_2024-01-12_19-52-41_settings.json  StockMachineLearningLstm_2024-01-12_19-52-41_tearsheet.html  StockMachineLearningLstm_2024-01-12_19-52-41_trades.csv
ml_cache_lstm_NVDA_freq15/: 15_lrit0.003_NVDA.csv  trading_info_NVDA_freq15.csv
notebook/: machine_learning_pytorch_lstm_colab.ipynb  pyproject.toml
