[tool.poetry]
name = "lstm-bot"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Stacey Smith <quedogf94@yahoo.com>"]

[tool.poetry.dependencies]
python = ">=3.10.11,<3.12"
numpy = "1.23.5"
pandas = "2.0.3"
ta = "0.10.2"
torch = "1.13.1"
scikit-learn = "1.2.2"
lumibot = "3.0.6"
#alpaca-trade-api = "3.2.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"