[tool.poetry]
name = "lstm-bot"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Stacey Smith <quedogf94@yahoo.com>"]

[tool.poetry.dependencies]
python = ">=3.10.11,<3.12"
numpy = "1.23.5"
pandas = "2.0.3"
ta = "0.10.2"
# torch = "1.13.1" 
# Use this command in the terminal after executing <poetry shell>
# pip install --pre torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/nightly/cpu
scikit-learn = "1.2.2"
alpaca-trade-api = "3.2.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
